--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>To Do List</title>
+    <link rel="icon" href="images/check-list.png">
   </head>
   <body>
     <h1>It's a weekday!</h1>
